# odingine

./: .gitignore  .gitmodules  CMakeLists.txt
dependencies/: CMakeLists.txt
dependencies/physfs/: CMakeLists.txt
src/: CMakeLists.txt
src/game/: CMakeLists.txt  main.c
src/game/assets/: hello.txt  test.fs  test.vs
src/odingine/: CMakeLists.txt  builtin_types.c  builtin_types.h  input.h  mesh.c  mesh.h  mpc.c  mpc.h  resources.c  resources.h  shaders.c  shaders.h  targetver.h  textures.c  textures.h  viking_math.c  viking_math.h  viking_string.h  viking_types.h  window.c  window.h
src/odingine/VikingMQ/: VikingMQ.c  VikingMQ.h
src/odingine/utils/: cJSON.c  cJSON.h  hashmap.c  hashmap.h
